# Elastic

./: .gitignore  .python-version  Dockerfile  SearchApi.py  main.py  prompt.py  pyproject.toml  requirements.txt  search.py
