[tool.poetry]
name = "pythonproject7"
version = "0.1.0"
description = ""
authors = ["mamdoot222 <a.h.sarohy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
elasticsearch = "^8.15.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.30.6"
ebooklib = "^0.18"
openai = "^1.52.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
